Split hawkbit-security-core to other modules and remove it